--- a/MapLib/ConsoleTest/ConsoleTest.csproj
+++ b/MapLib/ConsoleTest/ConsoleTest.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="StackExchange.Redis" Version="2.9.32" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\MapLib\MapLib.csproj" />
   </ItemGroup>
 
